# streams_group_repo

./: .pre-commit-config.yaml  LICENSE  README.md  bound_fraction.py  doing_funcs.py  fitting_funcs.py  halo_manager.py  halo_manager_aux.py  plotting_funcs.py  pyproject.toml  requirements.txt  setup.cfg
erebor/: __init__.py  compute_bound_fracs.py  plummer_fitting.py  rotation_matrix.py  strm_prog_analysis.py
gray_code/: bound_fraction.py  fitting_funcs.py  halo_manager.py  halo_manager_aux.py  morphology_diagnostic.py
pretty_plots/: __init__.py  pretty_plot.py
sim_analysis/: __init__.py  compute_bound_fracs.py  rotation_matrix.py
src/erebor/: strm_prog_analysis.py
src/sim_analysis/: Nbody_reader.py
