[metadata]
name = streams_group_repo
version = 1.0.0
author = Gray Thoron
author_email = gthoron@uw.edu
description = UWashington Stream Teams shared Repo
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/graythoron/streams_group_repo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    h5py
    matplotlib
    cmasher
    astropy
    scipy
    arviz